# recipes-quasar

./: LICENSE  README.md  package.json  quasar.conf.js
src/: App.vue
src-backend/recipe-backend-rs/: .gitignore  Cargo.toml  README.md  build_rpi1.sh  data_210114.tgz
src-backend/recipe-backend-rs/.cargo/: config.toml
src-backend/recipe-backend-rs/src/: main.rs
src-backend/recipe-backend-rs/src/api/: files.rs  mod.rs  url.rs  user.rs
src-backend/recipe-backend-rs/src/lib/: error.rs
src-electron/: electron-main.js  electron-preload.js
src-electron/icons/: icon.icns
src-icons/: gen_icons.sh
src/boot/: fontawesome.js  recipeApiWeb.js
src/components/: Accordion.vue  Calendar.vue  CalendarLink.vue  CategoryTable.vue  IngredientWithoutCategoryModal.vue  IngredientsList.vue  IngredientsSettingsTable.vue  RandomIngredientsModal.vue  RecipeDetails.vue  RecipeImporter.vue  SelectRecipeModal.vue  SettingsMenu.vue  SiteMenu.vue  UnknownIngredientsMixin.js
src/components/calendar/: Calendar.vue  CalendarCell.vue  NextCalendar.vue
src/components/web/: LoginModal.vue
src/css/: app.scss
src/pages/: AutoShoppingListPage.vue  Categories.vue  Home.vue  IngredientListPage.vue  Ingredients.vue  Recipes.vue  ShoppingListPage.vue  ShoppingLists.vue
src/router/: routes.js
src/store/: index.js
src/util/: date.js  entity.js  event.js  fetchRecipe.js  generatePDF.js
