[package]
name = "recipe-backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-identity = "0.3.1"
actix-http = "2.2.1"
actix-cors = "0.5.4"
curl = "0.4"
fs2 = "0.4"
rand = "0.8.4"
pwhash = "1"
serde_json = "1.0.73"
urldecode = "0.1"
uuid = { version = "0.8", features = ["v4"] }

serde = { version = "1.0", features = ["derive"] }